media/error_tc/error_236.txt
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_P8iBY7W.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_P8iBY7W.cpp:8:1: error: expected ';' before '}' token
 }
 ^
